<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tricloudcommunications.ce.instagramclone.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/instagramlogo"
        android:id="@+id/instagramLogoImageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/instagramLogoImageView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="47dp"
        android:id="@+id/userNameLogInEditText"
        android:labelFor="@+id/userNameLogInEditText"
        android:textSize="24sp"
        android:textAlignment="center"
        android:hint="@string/userNameLoginEditText"
        android:layout_below="@+id/instagramLogoImageView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:labelFor="@+id/userPasswordLogInEditText"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:id="@+id/userPasswordLogInEditText"
        android:layout_below="@+id/userNameLogInEditText"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="24sp"
        android:hint="@string/userPasswordLoginEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:id="@+id/userEmailLoginEditText"
        android:hint="@string/userEmailLoginEditText"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_below="@+id/userPasswordLogInEditText"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:text="@string/changeSignUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeSignUpTextView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/signUpButton"
        android:layout_alignBottom="@+id/signUpButton"
        android:layout_toEndOf="@+id/signUpButton"
        android:layout_marginStart="12dp"
        android:textColor="@color/colorAccent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpButton"
        android:layout_marginTop="37dp"
        android:textSize="20sp"
        android:text="@string/signUpButton"
        android:onClick="signUp"
        android:layout_below="@+id/userEmailLoginEditText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
